fixed contact page padding on mobile

--- a/src/Pages/Contact.css
+++ b/src/Pages/Contact.css
@@ -255,9 +255,17 @@ hr {
   }
 }
 
-@media screen and (max-width: 410px) {
+@media (max-width: 610px) {
   .send-button {
     width: 99%;
+  }
+  .heading-container {
+    padding-left: 8.2% !important;
+    margin-top: 30px;
+  }
+  .contact-list {
+    width: 500px !important;
+    margin-left: -80px;
   }
 }
 
